[package]
name = "uows-count"
version = "0.1.0"
authors = ["SaadiSave <https://www.github.com/SaadiSave>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
stderrlog = "0.4"

[dependencies.actix-web]
version = "3"
features = [
    "openssl"
]

[dependencies.openssl]
version = "0.10"
features = [
    "v110"
]

[dependencies.serde]
version = "1.0"
features = [
    "derive"
]

[dependencies.clap]
version = "3.0.0-beta.2"
features = [
    "yaml"
]

# [dependencies.rocket]
# git = "https://github.com/SergioBenitez/Rocket"
# version = "0.5.0-dev"