[package]
name = "uows-count"
version = "0.1.1"
authors = ["SaadiSave <https://github.com/SaadiSave>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
toml = "0.5"

[dependencies.clap]
version = "3.0.0-beta.2"
features = [
    "yaml"
]

[dependencies.serde]
version = "1.0"
features = [
    "derive"
]

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
version = "0.5.0-dev"
features = [
    "tls"
]
